<resources>
    <string name="app_name">DuckBlog</string>
    <string name="icon_login_page">Icon_login_page</string>
    <string name="your_login">Your Login</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your email...</string>
    <string name="text_login_button">Login to account</string>
    <string name="login_reg_button">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="image_reg_page">image reg page</string>
    <string name="reg_login_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="post_btn_hint">Post Photo</string>
    <string name="new_post_image_desc">Default image</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notifi_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ipsum augue, pellentesque eget mollis eget, maximus nec purus. Aenean in laoreet dui. Nam vitae dolor ut neque consectetur venenatis.</string>
    <string name="default_post_image">def image</string>
    <string name="data_time_post">Data Time</string>
    <string name="username_post">Username</string>
    <string name="like_0_likes">0 Likes</string>
    <string name="like_btn_desc">Like Button</string>
    <string name="comments_activity_text">Comments :</string>
    <string name="post_btn_desc">Comments button</string>
    <string name="comment_field_desc">Comment field</string>
    <string name="your_comment_here">Your Comment here ...</string>
    <string name="blog_comment_btn_desc">Comment button</string>
    <string name="comment_0_comment">0 Comments</string>
    <string name="loading_comments">Loading Comments ...</string>
    <string name="comment_date">01/01/1990</string>
</resources>
